# solana-raffle

./: Anchor.toml  package.json
programs/raffle/: Cargo.toml
programs/raffle/src/: error.rs  lib.rs  utils.rs
programs/raffle/src/processor/: buy_ticket.rs  claim.rs  close.rs  mod.rs  upload.rs
programs/raffle/src/state/: lottery.rs  mod.rs
tests/: raffle.ts
